# hashdown

./: .gitignore  CNAME  Cargo.toml  Dockerfile  Earthfile  Issues.md  README.md  auth-schema.sql  index.html  justfile  prev_permissions.txt  survey_grammer.pest
.github/workflows/: main.yml
[deprecated] ui/: .gitignore  Cargo.toml
[deprecated] ui/public/: output.css  tailwind-notsure.css
[deprecated] ui/src/: lib.rs
[deprecated] ui/src/pages/: survey.rs
backend/: Cargo.toml  form.pest  formexample-minimal.md  formexample.md  test_file.md
backend/pkg/: markdownparser.d.ts  markdownparser_bg.js  markdownparser_bg.wasm  markdownparser_bg.wasm.d.ts  package.json
backend/src/: form.rs  lib.rs
backend/test_forms/: formexample-error.md  formexample-minimal.md  formexample-validation-fail.md
core_types/src/: lib.rs
db/: .env  Cargo.toml  queries.sql
db/migrations/: 20230122172649_init.sql  20230312075514_init.sql
db/src/: answer.rs  database.rs  db.rs  lib.rs  main.rs  models.rs
db/supabase/: config.toml
entity/: Cargo.toml
entity/src/entities/: mod.rs  prelude.rs  responses.rs  sessions.rs  stripe_events.rs  surveys.rs  users.rs  workspaces.rs
landing/: astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  wrangler.toml
landing/src/components/: Pricing.astro
landing/src/layouts/: BaseLayout.astro
landing/src/lib/: constants.ts  utils.ts
landing/src/pages/: app.astro  index.astro
md-ui/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
md-ui/src/app/: App.tsx  Login.tsx  page.tsx
md-ui/src/components/: Checkbox.tsx  Survey.tsx
migration/: .env  Cargo.toml
migration/src/: m20220101_000001_create_table.rs
next-ui/: package-lock.json  package.json
react-components/src/app/: globals.css  page.tsx
react-components/src/components/: App.tsx  Editor.tsx  Login.tsx
server/: .env  Cargo.toml  README.md  build.rs  data-model.md  dev.env  market-research.md  prev_permissions2.txt  survey.rs  surveyapp.db
server/.sqlx/: query-06c191b45748c1069a8cc53dfcda3ee06aed50dd97945e60144df35846da9af2.json  query-08c245a1f997c11606a1bcaaae6613220a24e35dcc4ec0c8144e28ae226d47da.json  query-2941957fc9c55e0dc1bd9bf993c452db6a5fbcf86c2a639af7026dbab3632158.json  query-30e680e0119fa517fd4309db0e1b40a8cfd016c303448be00effa7348a611ec6.json  query-3a6c08a739dae75fc4c873ca3df5271031f8c728d1750445b86689af885365a1.json  query-58126df5959b99f820f6d399e1a59d7798fb544a71f33b20036c43d5b90d3c1a.json  query-5d5bf0f966961d2d00d2851bb3a40fe0be2d0bff6051f477bcc118e811e049b9.json  query-635f1b9eedb52c11320f21945eceeb2655a3c12efdf5df2da634a1e0ae631cb6.json  query-6433c1553b19e1093db73b04a52e1995b782060537b3922544990dd98175c4a2.json  query-73ad290ad709253d42596aaa5bac6e131a824ba8f2b12784e0b081535e667bdd.json  query-75f2846b0d86175ffcad5e24d638247fcd81b2595160e820c1d2ca4ecdf976eb.json  query-77deb62ea3223c0db548039411e5a64d749c427ff989ef911bd72a9bdcd7591c.json  query-a10baaa41c715e30699732af05283d63dbdcfd1eaffb9ee2beedbe35fe7d8461.json  query-b643c443250982ff2a72046db9605fb61da7ec3e6cea5c3bab108cb3dd1d9af0.json
server/bindings/: CreateSurveyRequest.ts
server/migrations/: 20230122172649_init.sql  20230623220617_init.down.sql  20230623220617_init.up.sql
server/migrations_sqlite/: 20230122172649_init.sql
server/old_migrations/: 20230122172649_init.sql
server/src/: answer.rs  api.rs  auth.rs  constants.rs  db.rs  email_validator.rs  error.rs  handlers.rs  log.rs  main.rs  payments.rs  response.rs  routes.rs  server.rs  stripe.rs  survey.rs  survey_responses.rs  user.rs  webhook.rs
server/src/config/: mod.rs
server/src/db/: README.md  database.rs  mod.rs  models.rs  sessions.rs  stripe.rs  survey.rs  surveys.rs  test_database.rs  users.rs
server/src/mail/: mail.rs  mailer.rs
server/src/mware/: ctext.rs  log.rs  mod.rs
server/src/server/: handlers.rs  mod.rs
server/src/survey/: model.rs  routes.rs
server/static/: emails.txt
server/templates/: create_survey.html  signup.html
src/: main.rs
ui/: Cargo.toml  Dioxus.toml  README.md  index.html  input.css  package-lock.json  package.json  tailwind.config.js  testform.html  tsconfig.json
ui-app/: package-lock.json  package.json  tsconfig.app.json
ui-app/src/: App.css  App.tsx
ui-app/src/app/: layout.tsx
ui-app/src/components/: app-crumbs.tsx  app-editor.tsx  app-header.tsx  app-sidebar.tsx  app-table.tsx
ui-app/src/pages/: main-page.tsx
ui-astro/: astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
ui-astro/public/: markdownparser_bg.wasm
ui-astro/src/: supabase.ts
ui-astro/src/components/: App.tsx  Editor.tsx  Login.tsx  Pricing.astro  Pricing.tsx  Radio.tsx  Survey.tsx
ui-astro/src/layouts/: BaseLayout.astro  Layout.astro
ui-astro/src/pages/: index.astro  login.astro  signup.astro
ui-astro/src/util/: searchDebounce.js
ui-astro/wasm/: markdownparser_bg.wasm
ui-next/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
ui-next/src/: index.css
ui-next/src/app/: globals.css  layout.tsx  page.tsx
ui-next/src/components/: Editor.tsx  Footer.tsx  (+3 more)
ui-sv/: package-lock.json  package.json
ui-vite/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui-vite/app/: globals.css
ui-vite/public/: sitemap.xml
ui-vite/src/: App.tsx  ListResponses.tsx  Login.tsx  Navbar.tsx  RenderedForm.tsx  Signup.tsx  createTable.tsx  index.css  main.tsx
ui/public/: input.css  output.css  tailwind.css
ui/src/: app.rs  index.css  lib.rs  main.rs  main.tsx  todo.rs  translate.html  translateme.html  types.rs
ui/src/components/: Crud.tsx
ui/src/components/custom/: ListResponses.tsx  Navbar.tsx  Waitlist.tsx  data-table.tsx
ui/src/migrations/: todo.sql
ui/src/pages/: Dashboard.tsx  EditorPage.tsx  Faq.tsx  HeroSection.tsx  Home.tsx  ListSurveys.tsx  StripePage.tsx  TestPage.tsx  auth.rs  login.rs  mod.rs  survey.rs
ui/style/: main.scss  output.css  output.scss
ui2/: Cargo.toml  Dioxus.toml  README.md
ui2/public/: output.css
ui2/src/: main.rs
yewui/: Cargo.toml
yewui/src/: lib.rs
(+30 files in other folders)
