[package]
name = "markdownparser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
getrandom = { version = "0.2.8", features = ["js"] }
# rand = "0.8.4"
regex = "1.7.0"
serde = { version = "1.0.152", features = ["derive"] }
tower = "0.4.13"
tower-http = "0.3.5"
# tower = "0.4.13"
# tower-http = { version = "0.3.5", features = ["cors"] }
# sqlx = { version = "0.6.2", features = ["sqlite", 'runtime-tokio-rustls'] }
tracing = "0.1.37"
wasm-bindgen = { version = "0.2.84", features = [
    # "serde",
    # "serde-serialize",
    # "serde_json",
] }
serde-wasm-bindgen = "0.4"

[lib]
crate-type = ["cdylib", "rlib"]
