[package]
edition = "2021"
name = "markdownparser"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"

getrandom = {version = "0.2.8", features = ["js"]}
# rand = "0.8.4"
regex = "1.7.0"
serde = {version = "1.0.152", features = ["derive"]}
# tower = "0.4.13"
# tower-http = "0.3.5"
# tower = "0.4.13"
# tower-http = { version = "0.3.5", features = ["cors"] }
# sqlx = { version = "0.6.2", features = ["sqlite", 'runtime-tokio-rustls'] }
serde-wasm-bindgen = "0.4"
tracing = "0.1.37"
wasm-bindgen = {version = "0.2.87", features = [
  "serde",
  "serde-serialize",
  "serde_json",
]}
# rand = "0.8.5"
chrono = "0.4.24"
derive_builder = "0.12.0"
# wasm-bindgen = "0.2.87"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
