[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
dotenvy = "0.15.6"
ormlite = { version = "0.12.0", features = ["postgres"] }
rand = "0.8.5"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
sqlx = "0.6.2"
tokio = "1.26.0"
tracing = "0.1.37"
