[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markdownparser = { "path" = "../backend" }

anyhow = "1.0.69"
chrono = "0.4.24"
dotenvy = "0.15.6"
# futures = "0.3.27"
# ormlite = { version = "0.12.0", features = ["postgres"] }
postgres-types = { version = "0.2.4", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
sqlx = { version = "0.7.0-alpha.1", features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
] }
tokio = "1.26.0"
# tokio-postgres = "0.7.7"
tracing = "0.1.37"


[build-dependencies]
dotenvy = "0.15.6"

[lib]
