[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markdownparser = { path = "../backend" }
db = { path = "../db" }

tower-http = { version = "0.3.5", features = ["full"] }
anyhow = "1.0.68"
axum = { version = "0.6.3", features = ["json", "macros"] }
serde = { version = "1.0.152", features = ["derive"] }
# sqlx = { version = "0.6.2", features = ["sqlite", 'runtime-tokio-rustls'] }
tokio = { version = "1.24.2", features = ["macros"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
dotenvy = "0.15.6"
# ormlite = { version = "0.9.2", features = ["sqlite", "runtime-tokio-rustls"] }
uuid = { version = "1.2.2", features = ["serde"] }
mime = "0.3.16"
serde_json = "1.0.93"
ts-rs = "6.2.1"
oauth2 = "4.3.0"
askama = { version = "0.12.0", features = ["with-axum", "mime", "mime_guess"] }
askama_axum = "0.3.0"
sqlx = { version = "0.7.0-alpha.1", features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
] }
chrono = "0.4.24"
# hyper = "0.14.24"


[dev-dependencies]
serial_test = "1.0.0"
reqwest = { version = "0.11.14", features = ["json"] }
