[package]
edition = "2021"
name = "server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# db = {path = "../db"}
markdownparser = {path = "../backend"}
ui = {path = "../ui"}
# yewui = { path = "../yewui", features = [] }

axum = {version = "0.6.3", features = ["json", "macros", "multipart"]}
tower-http = {version = "0.3.5", features = ["full", "fs"]}
# sqlx = { version = "0.6.2", features = ["sqlite", 'runtime-tokio-rustls'] }
tokio = {version = "1.24.2", features = ["macros", "full"]}
tower = "0.4.13"

tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
# ormlite = { version = "0.9.2", features = ["sqlite", "runtime-tokio-rustls"] }
mime = "0.3.16"
uuid = {version = "1.2.2", features = ["serde"]}
# ts-rs = "6.2.1"
# oauth2 = "4.3.0"
# askama = { version = "0.12.0", features = ["with-axum", "mime", "mime_guess"] }
# askama_axum = "0.3.0"
# include_dir = "0.7.3"
argon2 = "0.5.0"
async-trait = "0.1.68"
jsonwebtoken = "8.3.0"
mime_guess = "2.0.4"
serde_with = "2.3.2"
strum_macros = "0.24.3"
# tower-cookies = "0.9.0"
# hyper = "0.14.24"

# database
anyhow = "1.0.69"
chrono = "0.4.24"
dotenvy = "0.15.6"
# futures = "0.3.27"
# ormlite = { version = "0.12.0", features = ["postgres"] }
postgres-types = {version = "0.2.4", features = ["derive"]}
rand = "0.8.5"
serde = {version = "1.0.155", features = ["derive"]}
serde_json = "1.0.94"
sqlx = {version = "0.7.0-alpha.1", features = [
  "runtime-tokio",
  "tls-rustls",
  "sqlite",
  "postgres",
]}

# tokio-postgres = "0.7.7"
derive_builder = "0.12.0"
lettre = "0.10.4"
once_cell = "1.18.0"
serde_urlencoded = "0.7.1"
serde_html_form = "0.2.1"

[dev-dependencies]
reqwest = {version = "0.11.14", features = ["json"]}
serial_test = "1.0.0"

[profile.release]
debug = true
