[package]
name = "ui"
version = "0.1.0"
authors = ["Jeremy <jere.arde@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# markdownparser = { path = "../backend" }
# log = "0.4.6"
# WebAssembly Debug
# tokio = { version = "1.24.2", features = ["time"] }
# wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
gloo-timers = "0.2.6"
# web = "0.2.12"
dioxus = "0.3.2"
dioxus-web = "0.3.1"
dioxus-router = { version = "0.3.0", features = ["web"] }
fermi = "0.3.0"
dioxus-ssr = "0.3.0"
# dioxus-html = "0.3.1"
