[package]
authors = ["Jeremy <jere.arde@gmail.com>"]
edition = "2021"
name = "ui"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# markdownparser = { path = "../backend" }
# db = { path = "../db" }

# log = "0.4.6"
# WebAssembly Debug
# tokio = { version = "1.24.2", features = ["time"] }
# wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
gloo-timers = "0.2.6"
reqwest = {version = "0.11.17", features = [
  "json", #   "cookies",
]}
serde = {version = "1.0.152", features = ["derive"]}
# web = "0.2.12"
dioxus = {version = "0.3.2", features = []}
dioxus-web = {version = "0.3.1", features = []}
# dioxus-router = { version = "0.3.0", features = ["web"] }
# console_log = "1.0.0"
# dioxus-cli = "0.3.1"
dioxus-logger = "0.4.1"
dioxus-ssr = "0.3.0"
fermi = "0.3.0"
log = "0.4.17"
# tracing = "0.1.37"
# wasm-logger = "0.2.0"
# dioxus-html = "0.3.1"

[build]
target = "wasm32-unknown-unknown"
