[package]
authors = ["Jeremy <jere.arde@gmail.com>"]
edition = "2021"
name = "ui"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# markdownparser = { path = "../backend" }
# db = { path = "../db" }

console_error_panic_hook = "0.1.7"
# gloo-timers = {version = "0.3", features = ["futures"]}
reqwest = {version = "0.11.17", features = [
  "json", #   "cookies",
]}
serde = {version = "1.0.152", features = ["derive"]}

dioxus = {git = "https://github.com/DioxusLabs/dioxus.git", branch = "master"}

dioxus-logger = "0.4"
dioxus-router = {git = "https://github.com/DioxusLabs/dioxus.git", branch = "master"}
dioxus-web = {git = "https://github.com/DioxusLabs/dioxus.git", branch = "master"}

anyhow = "1.0.71"
# dioxus-ssr = "0.4"
# fermi = "0.4"
chrono = {version = "0.4.31", features = ["serde"]}
log = "0.4.17"
markdownparser = {path = "../backend"}
serde_json = "1.0.97"

[build]
target = "wasm32-unknown-unknown"

[dev-dependencies]
dioxus-cli = {git = "https://github.com/DioxusLabs/dioxus.git", branch = "master"}
wasm-bindgen = {version = "0.2.85"}
